Added List.of toKeyCloakClientService